--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <title>Green-Footprint</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <h1>IPWA01</h1>
