--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>IPWA01</h1>
+    <img src="Images/softwaredino-logo.png">
+    <a href="/Impressum/impressum.html">Impressum</a>
   </body>
 </html>
