--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>IPWA01</h1>
-    <img src="Images/softwaredino-logo.png">
+    <h1>Green-Footprint</h1>
+    <h4>CO2 Footprint</h4> <!-- -->
+    <img id="logo" src="Images/Logo-Lili-removebg-preview.png" alt="Logo von CO2 Footprint" width="42" height="60">
+    
     <a href="/Impressum/impressum.html">Impressum</a>
+    <footer>
+        <img src="Images/softwaredino-logo.png" alt="Loge Software Dino" width="150" height="30">
+    </footer>
   </body>
 </html>
