--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <label for="products_checkbox">Menu-1</label>
                     <ul class="dropdown">
                       <li><a href="tabelle.html">Tabelle</a></li>
-                      <li><a href="#">BBBB</a></li>
-                      <li><a href="#">CCCC</a></li>
+                      <li><a href="#"onclick="toggleRTL()">RTL</a></li>
+                      <li><a href="#"onclick="toggleLTR()">LTR</a></li>
                     </ul>
                     <li class="expandable_li">
                           <input type="checkbox" id="products_checkbox">
@@ -52,7 +52,15 @@
               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </p>
         </article>
-        
+        <script>
+          function toggleRTL() {
+            document.documentElement.dir = 'rtl'; // Setze die Ausrichtung auf RTL
+          }
+  
+          function toggleLTR() {
+            document.documentElement.dir = 'ltr'; // Setze die Ausrichtung auf LTR
+          }
+        </script>
 
     </main>
 
