anpassung-tap-icon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Ich bin ein Template</title>
+    <title>CO2-Kevin Faller</title>
+    <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
@@ -43,14 +44,9 @@
 
       <main>
         <article>
-            <h1>Ich bin eine Ueberschrifft</h1>
-            <p>Beispieltext...</p>
-            <p>Beispieltext...</p>
-            <p>Beispieltext...</p>
-            <p>Beispieltext...</p>
-            <p>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
+            <h1>Was ist CO2-Ausstoß?</h1>
+            <p>CO2-Ausstoß bezieht sich auf die Freisetzung von Kohlendioxid (CO2) in die Atmosphäre als Ergebnis menschlicher Aktivitäten, insbesondere durch die Verbrennung fossiler Brennstoffe wie Kohle, Öl und Gas. Der CO2-Ausstoß ist ein wesentlicher Treiber des Klimawandels, da CO2 ein Treibhausgas ist und zur Erwärmung der Erdatmosphäre beiträgt. Der Hauptverursacher von CO2-Emissionen sind die Verbrennung fossiler Brennstoffe für die Stromerzeugung, den Verkehr, die Industrie und die Heizung. Hohe CO2-Emissionen haben negative Auswirkungen auf die Umwelt und die menschliche Gesundheit, einschließlich des Anstiegs der globalen Durchschnittstemperaturen, des Meeresspiegelanstiegs, extremer Wetterereignisse und der Versauerung der Ozeane. Um den CO2-Ausstoß zu reduzieren und den Klimawandel einzudämmen, sind Maßnahmen wie die Förderung erneuerbarer Energien, Energieeffizienz, Elektromobilität und eine nachhaltige Landnutzung von entscheidender Bedeutung.</p>
+            
         </article>
         <script>
           function toggleRTL() {
