--- a/Impressum/impressum.html
+++ b/Impressum/impressum.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Ich bin ein Template</title>
+    <title>co2 Impressum</title>
     <link href="style-impressum.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body>
