--- a/tabelle.html
+++ b/tabelle.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Ich bin ein Template</title>
+    <title>co2 Tabelle</title>
+    <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link href="tabelle.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
