--- a/tabelle.html
+++ b/tabelle.html
@@ -12,7 +12,7 @@
           <div class="navbar">
             <img class="logo" src="/Images/Logo-Lili-removebg-preview.png" alt="Logo von CO2 Footprint">
             
-            <h1>Ich bin eine Ueberschrifft</h1>
+            <h1>co2 Unternehmenstabelle</h1>
             <nav>
                 <ul>
                   <li class="expandable_li">
