--- a/Impressum/impressum.html
+++ b/Impressum/impressum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="utf-8">
     <title>co2 Impressum</title>
     <link href="style-impressum.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
