--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="utf-8">
     <title>CO2-Kevin Faller</title>
     <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link href="style.css" rel="stylesheet">
