--- a/Templades/template.html
+++ b/Templades/template.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="utf-8">
     <title>Ich bin ein Template</title>
+    <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link href="template.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
