--- a/tabelle.html
+++ b/tabelle.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="utf-8">
     <title>co2 Tabelle</title>
     <link rel="icon" type="image/png" href="/Images/Logo-Lili-removebg-preview.png" />
     <link href="tabelle.css" rel="stylesheet">
